--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -1,5 +1,5 @@
 \subsection{Product perspective}
-	The system will be developed from scratch and it will use a lot of external services including Google services and the services provided by the \defined{affiliated companies}. This is because the services provided by Google are of high quality and there is no point in trying to redevelop them. The services of affiliated companies are needed to interface with them and have information on tickets and vehicles \textit{(for Sharing Transportation Companies)}.
+	The system will be developed from scratch and it will use a lot of external services including Google services and the services provided by the \defined{affiliated companies}. This is because the services provided by Google are of high quality and there is no point in trying to redevelop them. The services of affiliated companies are needed to interface with them and to have information on tickets and vehicles \textit{(for Sharing Transportation Companies)}.
 \subsection{Product functions}
 Here we provide several scenarios to better delineate the purposes for which the app should be designed, the situations the S2B will deal with and more generally to have a better comprehension of the associated environment.
 
@@ -7,7 +7,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 	Mario is the director of his company and he has seen an ad of Travlendar+, so he wants to try it to organize the weekly meetings with his employees. After the installation, he has to register to the app. The first thing he creates is his weekly program. He works from Monday to Friday, from 8 am to 16 pm.\newline
 	There is an actual meeting coming up on Friday at 8 pm, so he creates a new	meeting in the app. After setting the time and the day, he invites his employees to join the meeting. He will remain in his office, so he will not need to use	any travel means.\newline
 	Giovanni is one of Mario's employee and he is registered to Travlendar+. He receives a notification and accepts the invitation to the meeting. He chooses to reach the location by walk because he will already be nearby.\newline
-	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the cafe near the metro at 6:40 pm, so it suggests Alex to take the metro instead of the car. He accepts the suggestion.
+	Alex is another employee and does not have an account on Travlendar. He receives an email with an invitation link to register to the app. After the registration, the app redirects him to the meeting's invitation and he will proceed by accepting it and choosing to go by car. Then he explores the app and decides to add his weekly program. The app finds out that he will be in the cafe near the metro at 6:40 pm, so it suggests Alex take the metro instead of the car. He accepts the suggestion.
 	\subsubsection{Scenario 2}
 	Paolo, a resident of Bergamo, has recently registered to Travlendar+ and during	the initial setup has specified a flexible launch break from 11:00 am to 13:00 am, with at least 40 minutes of break.\newline
 	Tomorrow he is going to have an audition at 12:30 pm, in Monza. He inserts the event in the app and after having specified that the audition will end at about 13:30pm, he looks at the suggestions of the app on the travel means to take: the app suggests him some travel solutions, but he does not specify which he's going to take because he wants to think about it overnight.\newline
@@ -17,31 +17,31 @@ Here we provide several scenarios to better delineate the purposes for which the
 	\newline He chooses the second option to avoid being late at the audition.
 	\subsubsection{Scenario 3}
 	Alex is a professor of Bologna University, he has a short memory and is very badly organized, so he decides to rely on Travlendar+. Alex downloads it on occasion of a work trip. He signs up and decides to insert his credit card data for an eventual purchase from the app.\newline
-	He needs to reach the University of Parma to hold a conference. Alex sets up the app to arrive in Parma by train. Travlendar+ asks Alex the kind of event and he specifies it is a formal work meeting. The app asks him which transport means he wants to take in order to get to the university from the railway station. Alex opts to go by bicycle, although the app suggest not to, because of the formal type of meeting.\newline
+	He needs to reach the University of Parma to hold a conference. Alex sets up the app to arrive in Parma by train. Travlendar+ asks Alex the kind of event and he specifies it is a formal work meeting. The app asks him which transport means he wants to take in order to get to the university from the railway station. Alex opts to go by bicycle, although the app suggests not to, because of the formal type of meeting.\newline
 	The departure day Alex is in a shopping center with his family, he has completely forgotten that he has a train to take, but Travlendar+ solves the problem by notifying him of the appointment. At that point, Alex has no more time and chooses to buy the train tickets using the app. While he is on the train, Travlendar+ suggests him to choose another transport means (instead of a bike) because of the bad weather conditions. Alex accepts the advice and decides to take a bus.
 	\subsubsection{Scenario 4}
 	Luca is a meteorologist who works for a laboratory in Venice. He knows very well all the climatic problem that humans are creating in their Country. Luca finds Travlendar+ very appropriate to help in solving this problematic. He likes to opt for an Eco-friendly solution by setting up this preference in the app settings. In this way he can avoid, at least in this aspect, further damaging the environment. His favorite functionality is bike sharing because of its innovative localization system and its low environmental impact.
 	\subsubsection{Scenario 5}
-		Mark, son of Lucas, asks to his father to bring him  to the basketball tournament of Sunday morning.\newline
+		Mark, son of Lucas, asks his father to bring him to the basketball tournament of Sunday morning.\newline
 		Lucas checks the daily schedule for Sunday and he notices he already has an appointment with the hairdresser but, of course, spending time with his son is more important, so he decides to delete the previous event on the agenda and set a new one.\newline
-		Mark asks to the father if also his team mate Mike can come.
-		Of course Mark and Mike have to bring with them the bags with the jersey and the basketball shoes, so Lucas, creating the event on Travlendar+, after specifying the location of the basketball court, specifies also that he will bring with him baggage and passengers.\newline
-		Unfortunately his car is broken, so Lucas use  the app to look for alternative solutions.\newline
-		Travlendar+, taking into account the constraints previously settled by the man, suggests to him to use Enjoy or SmartToGo, two well known car sharing companies that will solve his problem.\newline
+		Mark asks the father whether also his teammate Mike can come.
+		Of course, Mark and Mike have to bring with them the bags with the jersey and the basketball shoes, so Lucas, creating the event on Travlendar+, after specifying the location of the basketball court, specifies also that he will bring baggage and there will be passengers.\newline
+		Unfortunately, his car is broken, so Lucas uses the app to look for alternative solutions.\newline
+		Travlendar+, taking into account the constraints previously settled by the man, suggests to him to use Enjoy or SmartToGo, two well-known car sharing companies that will solve his problem.\newline
 		Lucas accepts the suggested solution and proceeds with the creation of the event.
 	\subsubsection{Scenario 6}
-		Mary, John's wife, one week ago, asked to her husband to pick the children up to school on Monday at 13.00 and, because she knows John,  forced him to take note of that with Travlendar+.\newline
+		Mary, John's wife, one week ago, asked her husband to pick the children up to school on Monday at 13.00 and, knowing John,  forced him to take note of that with Travlendar+.\newline
 		So John planned this event on the app specifying that he will use the car to do it.
 		He specified also the location of the school.\newline
-		On Monday morning, as usual, Travlndar+ shows to John his daily program reminding him about his children and showing the previous  travel mean planned.\newline
-		John, still intentioned to pick the children up with the car, does not modify the plan, closes the app and goes to work in the other side of Milan.\newline
+		On Monday morning, as usual, Travlendar+ shows to John his daily program reminding him about his children and showing the previous travel mean planned.\newline
+		John, still intentioned to pick the children up with the car, does not modify the plan, closes the app and goes to work on the other side of Milan.\newline
 		At 12.00 Travlendar+, according to the GPS position of the man, suggests him to leave in 15 minutes.
-		Travlendar+ also suggests to avoid to go through  Viale Gioia because of the traffic and take the SS1.\newline
+		Travlendar+ also suggests avoiding to go through Viale Gioia because of the traffic and take the SS1.\newline
 		Thanks to Travlendar+ John manages to be on time, collect the children and make his wife proud of him. 
 \subsection{User characteristics}
 	\subsubsection{Actors}
 			\begin{itemize}
-			\item Person: a person that doesn't have a registered account. The only thing that he/she can do is to proceed with the Sign Up process;
+			\item Person: a person that does not have a registered account. The only thing that he/she can do is to proceed with the Sign Up process;
 			\item User: a person passed through a successful registration process and now
 			able to use all the Travlendar+ services. He/she can login to the system and, after that, use all
 			the platform's functionalities.
@@ -59,7 +59,7 @@ Here we provide several scenarios to better delineate the purposes for which the
 
 	\subsubsection{Domain Assumptions}
 		\begin{enumerate}[label={[D\arabic*]}]
-			\item \mylabel{D-retrieve-language}{the user's device should allow the app to retrieve the language settings}
+			\item \mylabel{D-retrieve-language}{the User's device should allow the app to retrieve the language settings}
 			\item \mylabel{D-registration-proceed}{when the registration process begin, the Person always inserts his/her credentials}
 			\item \mylabel{D-email-always-received}{when the S2B sends an email, it is always received by the receiver}
 			\item \mylabel{D-everyone-email}{every Person has an email address}
