fix alloy appearance, add alloy results, update Effort

--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -3,7 +3,8 @@
 \usepackage{tabu} % to use tables
 \usepackage{geometry} % to define page layout
 \usepackage[pdftex, colorlinks]{hyperref} % to use href
-
+\usepackage[T1]{fontenc} % to correctly show symbols like "|", ">", "<"
+\usepackage{lmodern} % needed when using T1 fontencoding
 \usepackage[dvipsnames]{xcolor}
 \usepackage{listings}
 \usepackage{enumitem}
