--- a/RASD/latex/sections/alloy.tex
+++ b/RASD/latex/sections/alloy.tex
@@ -1,1 +1,6 @@
+\subsection{Alloy Code}
 \alloyfile{../alloy.als}
+\subsection{Results of Alloy Analysis}
+\includegraphics[scale=0.5]{Images/alloyRun}
+\subsection{Alloy Model}
+% TODO
