--- a/RASD/latex/sections/effort&team.tex
+++ b/RASD/latex/sections/effort&team.tex
@@ -1,8 +1,9 @@
-We worked together most of the time, more than 30 hours. This is because in the beginning we struggled to find a way to divide responsibilities so we worked together and when we managed to work separately we still needed to discuss and to cross check our work.\newline
+We worked together most of the time, more than 30 hours. This is because in the beginning we struggled to find a way to divide responsibilities so we worked together and when we managed to work separately we still needed to discuss and to cross-check our work.\newline
 Below, for each component of the team, we provide his list of main responsibilities, but it is important to say that we have absolutely collaborated on everything as said before.
 
 \begin{description}
 	\item[Cassarino Pietro] % TODO
-	\item[Salaris Mirko] % TODO
+	\item[Salaris Mirko] organized the work on \LaTeX\ delineating the document structure and improving it later on. He produced 2 of the six scenarios and created the Class Diagram. Moreover, he delineated the first stub of Goals and Requirements. A part of the alloy modeling was his responsibility.\newline
+	\textbf{Total hours:} 63 hours, \textbf{Hours working alone:} 30 hours
 	\item[Ventrella Piervincenzo] % TODO
 \end{description}
