Update Efforts'section  on RASD

--- a/RASD/latex/sections/effort&team.tex
+++ b/RASD/latex/sections/effort&team.tex
@@ -5,5 +5,6 @@ Below, for each component of the team, we provide his list of main responsibilit
 	\item[Cassarino Pietro] % TODO
 	\item[Salaris Mirko] organized the work on \LaTeX\ delineating the document structure and improving it later on. He produced 2 of the six scenarios and created the Class Diagram. Moreover, he delineated the first stub of Goals and Requirements. A part of the alloy modeling was his responsibility.\newline
 	\textbf{Total hours:} 63 hours, \textbf{Hours working alone:} 30 hours
-	\item[Ventrella Piervincenzo] % TODO
+	\item[Ventrella Piervincenzo] produced 2 of the six scenarios and compiled several sections of the RASD such as Definitions' section , User characteristictics'section, Specific Requirements, Performance and Design Constraints. He also cared of the UML modeling (diagrams and analysis of them). Lastly he provided some mockups. \newline
+	\textbf{Total hours:} 53 hours, \textbf{Hours working alone:} 20 hours
 \end{description}
